bin/testsuite/tests/compiler/src/compiler5.swg
#global testerror "Err0686";
#toto error // swc-expected-error {{parser_err_invalid_compiler}}
